# YARP-ROS-LABS

./: README.md
buffredport-sender/: CMakeLists.txt  main.cpp
icub_sim/: CMakeLists.txt  main.cpp
port-receiver/: CMakeLists.txt  main.cpp  main_buffered.cpp
port-sender/: CMakeLists.txt  main.cpp
rpc-client/: CMakeLists.txt  main.cpp
rpc-server/: CMakeLists.txt  main.cpp
